--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     border: 0;
     color: #FFF;
     font-size: 18px;
+    cursor: pointer;
 }
 
 #agogo-input {
@@ -32,7 +33,7 @@ body {
 }
 
 
-.stopWatch {
+#timer {
     margin-top: 2rem;
     text-align: center;
 }
